--- a/index.html
+++ b/index.html
@@ -3,15 +3,9 @@
         <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
         <script src="https://cdn.jsdelivr.net/npm/vega-lite@5"></script>
         <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
-        <title>This is my example homepage.</title>
+        <title>IS 445 Assignment3.</title>
     </head>
     <body>
-        <p>
-            This is some text.
-        </p>
-        <p>
-            This is some more text.
-        </p>
         <div id="myviz">
         </div>
     </body>
@@ -23,12 +17,6 @@
             "description": "A scatterplot showing horsepower and miles per gallons that opens a Google search for the car that you click on.",
             "data": {"url": "building_inventory.csv"},
             "mark": "point",
-            "transform": [
-            {
-                "calculate": "'https://www.google.com/search?q=' + datum.Name",
-                "as": "url"
-            }
-            ],
             "encoding": {
                 "x": {"field": "Square Footage", "type": "quantitative"},
                 "y": {"field": "Total Floors", "type": "quantitative"},
