--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             "$schema": "https://vega.github.io/schema/vega-lite/v5.json",
             "description": "A scatterplot showing horsepower and miles per gallons that opens a Google search for the car that you click on.",
             "data": {"url": "building_inventory.csv"},
-            "mark": "point",
+            "mark": "circle",
             "encoding": {
                 "x": {"field": "Square Footage", "type": "quantitative"},
                 "y": {"field": "Total Floors", "type": "quantitative"},
